fix: make font size on small screen bigger

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,7 +21,7 @@ body {
 
 @media (max-width: 768px) {
   body {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
 }
 
@@ -55,6 +55,6 @@ h3 {
 
 @media (max-width: 768px) {
   h3 {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
 }
